A few spacing fixes on cards

--- a/src/scss/elements/composed/cards.scss
+++ b/src/scss/elements/composed/cards.scss
@@ -10,10 +10,10 @@
     }
 
     &-title {
-
+        margin: 10px 0;
     }
 
     &-detail {
-
+        padding: 0 1em;
     }
 }
